# backendPlayground

./: README.md  dataspace.md  db_research.md
actor_model/: README.md  applied_akka_patterns.md  clojure_concurrency.md
architecture/: hackernews-react-graphql.md  haskell-HTTP.md  nact.md  web-server.md
architecture/OkHttp/: domain_model.md
graphql_starter/: index.js  package.json
graphql_starter/data/: index.js
haskell-beam-starter/app/: Main.hs
haskell-beam-starter/dist-newstyle/cache/: compiler  config
haskell-persistent-starter/: CHANGELOG.md  LICENSE  README.md  haskell-persistent-starter.cabal  stack.yaml
haskell-persistent-starter/app/: Main.hs
haskell-persistent-starter/src/: EsqueletoExample.hs  HaskellPersistentStarter.hs
haskell-persistent-starter/src/EsqueletoExample/: Blog.hs
haskell-selda-experiment/: .gitignore  ChangeLog.md  README.md  package.yaml
haskell-selda-experiment/app/: Main.hs
haskell-selda-experiment/src/: Run.hs
haskell-servant-starter/: .gitignore  README.md
haskell-servant-starter/app/: Main.hs
haskell-servant-starter/dist-newstyle/cache/: compiler  config
