cabal-version:       2.0
name:                haskell-persistent-starter
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/boygao1992/haskell-persistent-starter
bug-reports:         https://github.com/boygao1992/haskell-persistent-starter/issues
license:             MIT
license-file:        LICENSE
author:              Wenbo Gao
maintainer:          wg2313@columbia.edu
copyright:           2019 Wenbo Gao
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/boygao1992/haskell-persistent-starter.git

library
  hs-source-dirs:      src
  exposed-modules:     HaskellPersistentStarter
                       

  build-depends:       base ^>= 4.12.0.0
                       , esqueleto >= 2.6
                       , monad-logger >= 0.3
                       , persistent >= 2.9
                       , persistent-template >= 2.5
                       , persistent-mysql-haskell >= 0.5
                       , resourcet >= 1.2
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable haskell-persistent-starter
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , haskell-persistent-starter
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
